applications/pi-stock/pi-stock-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pi-stock
  labels:
    app: pi-stock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pi-stock
  template:
    metadata:
      labels:
        app: pi-stock
    spec:
      containers:
        - image: kickbeak/pi-stock-de:latest
          name: pi-stock
          imagePullPolicy: Always
          ports:
            - name: pi-stock
              containerPort: 3001
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
