applications/pi-stock/pi-stock-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pi-stock
  labels:
    app: pi-stock
spec:
  selector:
    app: pi-stock
  ports:
    - name: pi-stock
      port: 3001
      targetPort: pi-stock
  clusterIP: None
